@@ -1,4 +1,7 @@
 2012-09-14 Molnar Karoly <proton7@freemail.hu>
+        * tools/device-help.pl: Minor code optimization. More accurate names.
+
+2012-09-14 Molnar Karoly <proton7@freemail.hu>
         * tools/config-help.pl: Rename to tools/device-help.pl.
 
 2012-09-14 Molnar Karoly <proton7@freemail.hu>
